--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "archiver": "^7.0.1",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "canvas": "^3.2.0",
     "cloudinary": "^1.41.3",
@@ -24,6 +25,7 @@
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "twilio": "^5.10.6",
     "unzipper": "^0.12.3"
   },
   "devDependencies": {
